Add --enable-native-access flag to test processes