@@ -132,6 +132,7 @@
 					<forkCount>0.5C</forkCount>
 					<argLine>
 						-Xmx128m
+						--enable-native-access=javafx.graphics
 						--add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
 						--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 						--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
@@ -271,6 +272,7 @@
 									<runOrder>alphabetical</runOrder>
 									<argLine>
 										-Xmx128m
+										--enable-native-access=javafx.graphics
 										--add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
 										--add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
 										--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
